--- a/client/assets/scss/shared/_text.scss
+++ b/client/assets/scss/shared/_text.scss
@@ -1,83 +1,83 @@
 .h1 {
     font-family: $ff-bold;
     font-size: 6.4rem;
-    line-height: 7.2rem;
+    line-height: 113%;
     letter-spacing: -.116rem;
 }
 
 .h2 {
     font-family: $ff-bold;
     font-size: 5.2rem;
-    line-height: 6.2rem;
+    line-height: 120%;
     letter-spacing: -.094rem;
 }
 
 .h3 {
     font-family: $ff-bold;
     font-size: 4.2rem;
-    line-height: 5.2rem;
+    line-height: 124%;
     letter-spacing: -.076rem;
 }
 
 .h4 {
     font-family: $ff-bold;
     font-size: 3.2rem;
-    line-height: 3.8rem;
+    line-height: 119%;
     letter-spacing: -.058rem;
 }
 
 .p24 {
     font-family: $ff-regular;
     font-size: 2.4rem;
-    line-height: 3.4rem;
+    line-height: 142%;
     letter-spacing: -.043rem;
 }
 
 .p24b {
     font-family: $ff-bold;
     font-size: 2.4rem;
-    line-height: 3.4rem;
+    line-height: 142%;
     letter-spacing: -.043rem;
 }
 
 .p18 {
     font-family: $ff-regular;
     font-size: 1.8rem;
-    line-height: 2.8rem;
+    line-height: 156%;
     letter-spacing: -.032rem;
 }
 
 .p18b {
     font-family: $ff-bold;
     font-size: 1.8rem;
-    line-height: 2.8rem;
+    line-height: 156%;
     letter-spacing: -.032rem;
 }
 
 .p16 {
     font-family: $ff-regular;
     font-size: 1.6rem;
-    line-height: 2.6rem;
+    line-height: 162%;
     letter-spacing: -.029rem;
 }
 
 .p16b {
     font-family: $ff-bold;
     font-size: 1.6rem;
-    line-height: 2.6rem;
+    line-height: 162%;
     letter-spacing: -.029rem;
 }
 
 .p14 {
     font-family: $ff-regular;
     font-size: 1.4rem;
-    line-height: 2.2rem;
+    line-height: 170%;
     letter-spacing: -.025rem;
 }
 
 .p14b {
     font-family: $ff-bold;
     font-size: 1.4rem;
-    line-height: 2.2rem;
+    line-height: 170%;
     letter-spacing: -.025rem;
 }
