--- a/client/assets/scss/shared/_mixins.scss
+++ b/client/assets/scss/shared/_mixins.scss
@@ -2,17 +2,29 @@
     @font-face {
         font-family: $font_name;
         font-display: swap;
-        src:
-            url('~assets/fonts/' + $file_name + '.woff') format('woff'),
-            url('~assets/fonts/' + $file_name + '.woff2') format('woff2');
+        src: url("~assets/fonts/" + $file_name + ".woff") format("woff"),
+        url("~assets/fonts/" + $file_name + ".woff2") format("woff2");
         font-weight: $weight;
         font-style: $style;
     }
 }
-$maxWidth: 1440;
 
-//@mixin adaptiv-font($pcSize, $mobSize) {
-//  $addSize: $pcSize - $mobSize;
-//  $maxWidth: $maxWidth - 320;
-//  font-size: calc($mobSize + px + $addSize * ((100vw - 320px) / $maxWidth));
-//}
+@mixin hover {
+    @media (hover), (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        &:hover {
+            @content;
+        }
+    }
+}
+
+@mixin respond-to($name, $bp: $breakpoints) {
+    $max: breakpoint-max($name, $bp);
+
+    @if $max {
+        @media (max-width: $max) {
+            @content;
+        }
+    } @else {
+        @content;
+    }
+}
