--- a/client/assets/scss/shared/_text.scss
+++ b/client/assets/scss/shared/_text.scss
@@ -1,8 +1,8 @@
 .h1 {
     font-family: $ff-bold;
-    font-size: 6.4rem;
-    line-height: 113%;
-    letter-spacing: -.116rem;
+    font-size: 4.2rem;
+    line-height: 5.2rem;
+    letter-spacing: -.076rem;
 }
 
 .h2 {
@@ -29,7 +29,7 @@
 .p24 {
     font-family: $ff-regular;
     font-size: 2.4rem;
-    line-height: 142%;
+    line-height: 3.4rem;
     letter-spacing: -.043rem;
 }
 
