add review, certs sections

--- a/client/assets/scss/shared/_vars.scss
+++ b/client/assets/scss/shared/_vars.scss
@@ -20,6 +20,7 @@ $ff-regular: inter-regular, sans-serif;
 $transition: .3s ease-out;
 
 $h-height: 8rem;
+$h-height-mobile: 6rem;
 
 //Breakpoints
 $breakpoints: (
