feat(redesign): update backend and frontend

--- a/frontend/assets/scss/style.scss
+++ b/frontend/assets/scss/style.scss
@@ -62,3 +62,12 @@ body {
     transform: translateX(100%);
 }
 
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 3s;
+}
+
+.fade-enter,
+.fade-leave-active {
+    opacity: 0;
+}
