feat(redesign): fixed nuxt image

--- a/frontend/assets/scss/style.scss
+++ b/frontend/assets/scss/style.scss
@@ -20,6 +20,10 @@ html {
 body {
     font-family: $ff-regular;
     color: $light;
+
+    img {
+        object-fit: contain;
+    }
 }
 
 .container {
